[tool.poetry]
name = "hopes"
version = "0.0.3"
description = "HVAC optimisation with Off-Policy Evaluation and Selection methods"
authors = ["Antoine Galataud <antoine@foobot.io>"]
packages = [
    { include = "hopes/" },
]
readme = "README.md"
license = "MIT"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.poetry.dependencies]
python = "~3.10"
numpy = "1.26.4"
pandas = "2.2.2"
scikit-learn = "1.5.1"
torch = "2.10.0"
pwlf = "2.2.1"
matplotlib = "3.9.1"
urllib3 = "2.6.3"
requests = "2.32.5"
pytz = "2024.1"
PyYAML = "~6.0.1"
boto3 = "^1.34.74"
dataclasses-json = "0.6.7"
tabulate = "0.9.0"
onnxruntime = "1.18.1"

[tool.poetry.dev-dependencies]
coverage = { version = "7.6.0", extras = ["toml"] }

[tool.poetry.scripts]
tests = "tests.discover:run"
coverage = "tests.discover:coverage"

[tool.coverage.report]
include = [
    "hopes/*",
]
omit = [
    "**/__init__.py",
    "hopes/assert_utils.py",
    "hopes/dev_utils.py",
]
ignore_errors = true
show_missing = true
skip_empty = true
skip_covered = false

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
